# DartScoreMate

./: .env  .gitignore  .gitlab-  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_image_classification.ipynb
DetectionExplanation/: scoreDetection_presentation.ipynb
sql/: game_table.sql  test_sql.py
src/flask_app/: .env  Camera_ID.py  Dockerfile  aid_functions_sql.py  camera_handling.py  checkouts-3darts.txt  detection.py  gamedata.py  main.py  main_with_recommendations.py  recommender.py
src/flask_app/UnitTests/: test_flask_app.py
src/flask_app/image_processing/: aid_functions_image_processing.py  dart_tip_processing.py  image_processing.py
src/flask_app/static/: styles.css
src/flask_app/static/scripts/: camera_selection.js  chatbot.js  game.js
src/flask_app/templates/: base.html  board-status.html  chat_history.html  game.html  header.html  index.html  play.html
src/flask_app/tests/: test_flask_app.py  test_gamedata.py  test_sql.py
src/pic_snap/: Dockerfile  README.md  app.py  requirements.txt
src/python/: CameraMode.py  Game.py  GameController.py  Player.py  camera_handling.py  detection_explanation_nb.ipynb  gamedata.py  main.py  requirements.txt  startdartgame.py  test_main.py
src/python/GUI/: GameView.py
src/python/GUI/templates/: board-status.html
src/python/UnitTests/: test_flask_app.py
src/python/static/: styles.css
src/python/static/css/: style.css
src/python/static/scripts/: game.js
src/python/templates/: board-status.html  game.html  header.html  index.html  play.html
