[project]
name = "dartscore_mate"
version = "0.1.0"
requires-pyton = ">=3.11"
dependencies = [
    "numpy",
    "Flask>=3.0",
    "enum34",
    "gunicorn",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "python-dotenv>=1.0.0",
    "groq>=0.4.0"
]

[tool.poetry]
name = "dartscore_mate"
version = "0.1.0"
description = "A Dart scoring application with camera integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
opencv-python = "^4.5.3"
numpy = "^1.21.2"
python-dotenv = "^0.19.0"
groq = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"